Update: app/js/main_start_cam.js, app/js/selector_source.js, app/pages/settings.html, app/pages/source.html

--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -48,6 +48,14 @@
             <span class="slider"></span>
           </label>
           <label id="video-size-label" class="video-size-label"></label>
+
+          <!-- <label for="video-size-select">Select Size:</label> -->
+          <select id="video-size-select">
+            <option value="1920x1080">1920x1080 (Full HD)</option>
+            <option value="1280x720">1280x720 (HD)</option>
+            <option value="640x480" selected>640x480 (VGA)</option>
+            <option value="320x240">320x240 (QVGA)</option>
+          </select>
         </div>
 
         <!-- Frame rate Settings -->
