Update: app/css/styles_main.css, app/js/detect_break.js, app/js/detect_fall.js, app/js/detect_fire.js, app/js/detect_flood.js, app/js/detect_light.js, app/js/detect_motion.js, app/js/detect_rain.js, app/js/detect_smoke.js, app/js/detect_sound.js, app/js/mode.js, app/js/status.js, app/pages/mode.html, app/pages/status.html, index.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
         style="display: none; padding: 0"
       ></div>
 
+      <!-- include mode.html  -->
+      <div
+        class="group-frame-mode"
+        id="group-frame-mode"
+        include-html="app/pages/mode.html"
+        style="display: none; padding: 0"
+      ></div>
+
+      <!-- include status.html  -->
+      <div
+        class="group-frame-status"
+        id="group-frame-status"
+        include-html="app/pages/status.html"
+        style="display: none; padding: 0"
+      ></div>
+
       <!-- video feed -->
       <div class="status" id="status">Initializing...</div>
       <div class="video-section">
@@ -272,6 +288,7 @@
     <script src="app/js/init_system.js"></script>
     <script src="app/js/source.js"></script>
     <script src="app/js/mode.js"></script>
+    <script src="app/js/status.js"></script>
     <script src="app/js/screen.js"></script>
     <script src="app/js/theme.js"></script>
     <script src="app/js/main_menu.js"></script>
