--- a/app/pages/status.html
+++ b/app/pages/status.html
@@ -5,39 +5,35 @@
         <!-- Detection Indicators -->
         <div class="detection-indicators" style="margin-top: 10px">
           <span id="motion-status" class="detection-status"
-            >Motion: <b style="color: green">--</b></span
+            >Motion: <b>-</b></span
           >
           |
           <span id="sound-status" class="detection-status"
-            >Sound: <b style="color: green">--</b></span
+            >Sound: <b>-</b></span
           >
           |
           <span id="smoke-status" class="detection-status"
-            >Smoke: <b style="color: green">--</b></span
+            >Smoke: <b>-</b></span
           >
           |
-          <span id="fire-status" class="detection-status"
-            >Fire: <b style="color: green">--</b></span
-          >
+          <span id="fire-status" class="detection-status">Fire: <b>-</b></span>
           |
           <span id="flood-status" class="detection-status"
-            >Flood: <b style="color: green">--</b></span
+            >Flood: <b>-</b></span
           >
           |
           <span id="light-status" class="detection-status"
-            >Light: <b style="color: green">--</b></span
+            >Light: <b>-</b></span
           >
           |
-          <span id="rain-status" class="detection-status"
-            >Rain: <b style="color: green">--</b></span
-          >
+          <span id="rain-status" class="detection-status">Rain: <b>-</b></span>
           |
           <span id="falling-status" class="detection-status"
-            >Falling: <b style="color: green">--</b></span
+            >Falling: <b>-</b></span
           >
           |
           <span id="breaking-status" class="detection-status"
-            >Breaking: <b style="color: green">--</b></span
+            >Breaking: <b>-</b></span
           >
         </div>
       </div>
