Update: app/pages/detect.html, app/pages/mode.html, app/pages/settings.html, app/pages/source.html, app/pages/voice.html, index.html

--- a/app/pages/detect.html
+++ b/app/pages/detect.html
@@ -13,6 +13,8 @@
             <input
               type="checkbox"
               id="motion-switch"
+              title="Toggle motion detection"
+              placeholder="Toggle motion detection"
               onclick="toggleMotionDetection()"
             />
             <span class="slider"></span>
@@ -54,6 +56,8 @@
             <input
               type="checkbox"
               id="smoke-switch"
+              title="Toggle smoke detection"
+              placeholder="Toggle smoke detection"
               onclick="toggleSmokeDetection()"
             />
             <span class="slider"></span>
@@ -95,6 +99,8 @@
             <input
               type="checkbox"
               id="fire-switch"
+              title="Toggle fire detection"
+              placeholder="Toggle fire detection"
               onclick="toggleFireDetection()"
             />
             <span class="slider"></span>
@@ -136,6 +142,8 @@
             <input
               type="checkbox"
               id="flood-switch"
+              title="Toggle flood detection"
+              placeholder="Toggle flood detection"
               onclick="toggleFloodDetection()"
             />
             <span class="slider"></span>
@@ -177,6 +185,8 @@
             <input
               type="checkbox"
               id="light-switch"
+              title="Toggle light detection"
+              placeholder="Toggle light detection"
               onclick="toggleLightDetection()"
             />
             <span class="slider"></span>
@@ -218,6 +228,8 @@
             <input
               type="checkbox"
               id="rain-switch"
+              title="Toggle rain detection"
+              placeholder="Toggle rain detection"
               onclick="toggleRainDetection()"
             />
             <span class="slider"></span>
@@ -261,6 +273,8 @@
             <input
               type="checkbox"
               id="falling-switch"
+              title="Toggle falling detection"
+              placeholder="Toggle falling detection"
               onclick="toggleFallingDetection()"
             />
             <span class="slider"></span>
@@ -304,6 +318,8 @@
             <input
               type="checkbox"
               id="breaking-switch"
+              title="Toggle breaking detection"
+              placeholder="Toggle breaking detection"
               onclick="toggleBreakingDetection()"
             />
             <span class="slider"></span>
@@ -345,6 +361,8 @@
             <input
               type="checkbox"
               id="sound-switch"
+              title="Toggle sound detection"
+              placeholder="Toggle sound detection"
               onclick="toggleSoundDetection()"
             />
             <span class="slider"></span>
