--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -36,9 +36,9 @@
           <label id="gps-label" class="gps-label"></label>
         </div>
 
-        <!-- Video Size Settings -->
+        <!-- Video Resolution Settings -->
         <div class="settings-row">
-          <label for="video-size-switch">Video Size</label>
+          <label for="video-size-switch">Video Resolution</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -50,7 +50,7 @@
           <label id="video-size-label" class="video-size-label"></label>
 
           <!-- <label for="video-size-select">Select Size:</label> -->
-          <select id="video-size-select">
+          <select id="video-size-select" title="Select video resolution">
             <option value="1920x1080">1920x1080 (Full HD)</option>
             <option value="1280x720">1280x720 (HD)</option>
             <option value="640x480" selected>640x480 (VGA)</option>
