--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -3,7 +3,7 @@
   <div class="video-source-section" id="video-source-section">
     <div class="source-section">
       <label for="video-source">
-        <select id="video-source" disabled="true">
+        <select id="video-source" disabled="true" title="Select video source">
           <!-- <option value="camera" selected>Camera (default)</option> -->
           <option value="camera" selected>Camera (default)</option>
           <option value="camera_usb">USB Camera (external)</option>
