--- a/app/pages/voice.html
+++ b/app/pages/voice.html
@@ -7,6 +7,8 @@
           <input
             type="checkbox"
             id="voice-command-switch"
+            title="Select voice command"
+            placeholder="Select voice command"
             onclick="toggleVoiceCommand()"
           />
           <span class="slider"></span>
@@ -34,6 +36,8 @@
           <input
             type="checkbox"
             id="voice-alert-switch"
+            title="Select voice alert"
+            placeholder="Select voice alert"
             onclick="toggleVoiceAlert()"
           />
           <span class="slider"></span>
@@ -61,6 +65,8 @@
           <input
             type="checkbox"
             id="voice-status-switch"
+            title="Select voice status"
+            placeholder="Select voice status"
             onclick="toggleVoiceStatus()"
           />
           <span class="slider"></span>
