--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -3,7 +3,7 @@
     <div class="mode-section" id="mode-section">
       <div class="mode-select-section">
         <label for="mode-select">
-          <select id="mode-select">
+          <select id="mode-select" title="Select mode">
             <option value="auto" selected>Auto</option>
             <option value="manual">Manual</option>
             <option value="custom">Custom</option>
