Update: app/pages/detect.html, app/pages/settings.html, app/pages/source.html

--- a/app/pages/detect.html
+++ b/app/pages/detect.html
@@ -26,6 +26,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust motion sensitivity"
+            placeholder="Adjust motion sensitivity"
             oninput="updateValueMotion(this.value)"
           />
           <span id="motion-sensitivity-value">5</span>
@@ -69,6 +71,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust smoke sensitivity"
+            placeholder="Adjust smoke sensitivity"
             oninput="updateValueSmoke(this.value)"
           />
           <span id="smoke-sensitivity-value">5</span>
@@ -112,6 +116,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust fire sensitivity"
+            placeholder="Adjust fire sensitivity"
             oninput="updateValueFire(this.value)"
           />
           <span id="fire-sensitivity-value">5</span>
@@ -155,6 +161,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust flood sensitivity"
+            placeholder="Adjust flood sensitivity"
             oninput="updateValueFlood(this.value)"
           />
           <span id="flood-sensitivity-value">5</span>
@@ -198,6 +206,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust light sensitivity"
+            placeholder="Adjust light sensitivity"
             oninput="updateValueLight(this.value)"
           />
           <span id="light-sensitivity-value">5</span>
@@ -241,6 +251,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust rain sensitivity"
+            placeholder="Adjust rain sensitivity"
             oninput="updateValueRain(this.value)"
           />
           <span id="rain-sensitivity-value">5</span>
@@ -286,6 +298,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust falling sensitivity"
+            placeholder="Adjust falling sensitivity"
             oninput="updateValueFalling(this.value)"
           />
           <span id="falling-sensitivity-value">5</span>
@@ -331,6 +345,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust breaking sensitivity"
+            placeholder="Adjust breaking sensitivity"
             oninput="updateValueBreaking(this.value)"
           />
           <span id="breaking-sensitivity-value">5</span>
@@ -374,6 +390,8 @@
             max="10"
             value="5"
             disabled="true"
+            title="Adjust sound sensitivity"
+            placeholder="Adjust sound sensitivity"
             oninput="updateValueSound(this.value)"
           />
           <span id="sound-sensitivity-value">5</span>
