--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -85,7 +85,12 @@
         <div class="settings-row">
           <label for="counting-objects">Counting Objects</label>
           <label class="switch">
-            <input type="checkbox" id="counting-objects-switch" />
+            <input
+              type="checkbox"
+              id="counting-objects-switch"
+              title="Toggle counting objects"
+              placeholder="Toggle counting objects"
+            />
             <span class="slider"></span>
           </label>
         </div>
@@ -99,6 +104,8 @@
             <input
               type="checkbox"
               id="text-switch"
+              title="Toggle text detection"
+              placeholder="Toggle text detection"
               onclick="toggleTextDetection()"
             />
             <span class="slider"></span>
@@ -109,7 +116,13 @@
         <div class="settings-row">
           <label for="sms-alert">SMS Alert</label>
           <label class="switch">
-            <input type="checkbox" id="sms-switch" onclick="toggleSmsInput()" />
+            <input
+              type="checkbox"
+              id="sms-switch"
+              title="Toggle SMS alert"
+              placeholder="Toggle SMS alert"
+              onclick="toggleSmsInput()"
+            />
             <span class="slider"></span>
           </label>
           <input
@@ -137,6 +150,8 @@
             <input
               type="checkbox"
               id="line-switch"
+              title="Toggle line alert"
+              placeholder="Toggle line alert"
               onclick="toggleLineInput()"
             />
             <span class="slider"></span>
@@ -166,6 +181,8 @@
             <input
               type="checkbox"
               id="email-switch"
+              title="Toggle email alert"
+              placeholder="Toggle email alert"
               onclick="toggleEmailInput()"
             />
             <span class="slider"></span>
@@ -195,6 +212,8 @@
             <input
               type="checkbox"
               id="notification-switch"
+              title="Toggle notification"
+              placeholder="Toggle notification"
               onclick="toggleNotification()"
             />
             <span class="slider"></span>
@@ -205,7 +224,12 @@
         <div class="settings-row">
           <label for="privacy">Privacy</label>
           <label class="switch">
-            <input type="checkbox" id="privacy-switch" />
+            <input
+              type="checkbox"
+              id="privacy-switch"
+              title="Toggle privacy"
+              placeholder="Toggle privacy"
+            />
             <span class="slider"></span>
           </label>
         </div>
@@ -214,7 +238,12 @@
         <div class="settings-row">
           <label for="history">History</label>
           <label class="switch">
-            <input type="checkbox" id="history-switch" />
+            <input
+              type="checkbox"
+              id="history-switch"
+              title="Toggle history"
+              placeholder="Toggle history"
+            />
             <span class="slider"></span>
           </label>
         </div>
