--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -41,7 +41,7 @@
       </button>
 
       <label for="video-unit">
-        <select id="video-unit" disabled="true">
+        <select id="video-unit" disabled="true" title="Select video unit">
           <!-- <option value="1" selected>1</option> -->
           <option value="1" selected>1</option>
           <option value="2">2</option>
