Update: app/pages/detect.html, app/pages/settings.html

--- a/app/pages/detect.html
+++ b/app/pages/detect.html
@@ -6,7 +6,7 @@
 
         <!-- Motion Detection Settings -->
         <div class="settings-row">
-          <label for="motion-detection" title="Detects movement."
+          <label for="motion-switch" title="Detects movement."
             >Motion Detection</label
           >
           <label class="switch">
@@ -51,7 +51,7 @@
 
         <!-- Smoke Detection Settings -->
         <div class="settings-row">
-          <label for="smoke-detection" title="Detects smoke."
+          <label for="smoke-switch" title="Detects smoke."
             >Smoke Detection</label
           >
           <label class="switch">
@@ -96,7 +96,7 @@
 
         <!-- Fire Detection Settings -->
         <div class="settings-row">
-          <label for="fire-detection" title="Detects flames."
+          <label for="fire-switch" title="Detects flames."
             >Fire Detection</label
           >
           <label class="switch">
@@ -141,7 +141,7 @@
 
         <!-- Flood Detection Settings -->
         <div class="settings-row">
-          <label for="flood-detection" title="Detects flooding."
+          <label for="flood-switch" title="Detects flooding."
             >Flood Detection</label
           >
           <label class="switch">
@@ -186,7 +186,7 @@
 
         <!-- Light Detection Settings -->
         <div class="settings-row">
-          <label for="light-detection" title="Detects changes in lighting."
+          <label for="light-switch" title="Detects changes in lighting."
             >Light Detection</label
           >
           <label class="switch">
@@ -231,9 +231,7 @@
 
         <!-- Rain Detection Settings -->
         <div class="settings-row">
-          <label for="rain-detection" title="Detects rain."
-            >Rain Detection</label
-          >
+          <label for="rain-switch" title="Detects rain.">Rain Detection</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -276,9 +274,7 @@
 
         <!-- Falling Detection Settings -->
         <div class="settings-row">
-          <label
-            for="falling-detection"
-            title="Detects falling objects or people."
+          <label for="falling-switch" title="Detects falling objects or people."
             >Falling Detection</label
           >
           <label class="switch">
@@ -324,7 +320,7 @@
         <!-- Breaking Detection Settings -->
         <div class="settings-row">
           <label
-            for="breaking-detection"
+            for="breaking-switch"
             title="Detects glass breaking or intrusion."
             >Breaking Detection</label
           >
@@ -367,10 +363,11 @@
             title="Alert"
           ></div>
         </div>
+        s
 
         <!-- Sound Detection Settings -->
         <div class="settings-row">
-          <label for="sound-detection" title="Detects sound."
+          <label for="sound-switch" title="Detects sound."
             >Sound Detection</label
           >
           <label class="switch">
