--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -23,7 +23,11 @@
             />
             <span class="slider"></span>
           </label>
-          <label id="datetime-label" class="datetime-label"></label>
+          <label
+            for="datetime-switch"
+            id="datetime-label"
+            class="datetime-label"
+          ></label>
         </div>
 
         <!-- GPS/Location Settings -->
@@ -33,7 +37,7 @@
             <input type="checkbox" id="gps-switch" onclick="toggleGPS()" />
             <span class="slider"></span>
           </label>
-          <label id="gps-label" class="gps-label"></label>
+          <label for="gps-switch" id="gps-label" class="gps-label"></label>
         </div>
 
         <!-- Video Resolution Settings -->
@@ -47,7 +51,11 @@
             />
             <span class="slider"></span>
           </label>
-          <label id="video-size-label" class="video-size-label"></label>
+          <label
+            for="video-size-switch"
+            id="video-size-label"
+            class="video-size-label"
+          ></label>
 
           <!-- <label for="video-size-select">Select Size:</label> -->
           <select id="video-size-select" title="Select video resolution">
@@ -69,7 +77,11 @@
             />
             <span class="slider"></span>
           </label>
-          <label id="frame-rate-label" class="frame-rate-label"></label>
+          <label
+            for="frame-rate-switch"
+            id="frame-rate-label"
+            class="frame-rate-label"
+          ></label>
         </div>
 
         <!-- Streaming Settings -->
