Update: app/pages/settings.html

--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -95,7 +95,7 @@
 
         <!-- Counting Objects Settings -->
         <div class="settings-row">
-          <label for="counting-objects">Counting Objects</label>
+          <label for="counting-objects-switch">Counting Objects</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -109,7 +109,7 @@
 
         <!-- Text Detection Settings -->
         <div class="settings-row">
-          <label for="text-detection" title="Detects text in video."
+          <label for="text-switch" title="Detects text in video."
             >Text Detection</label
           >
           <label class="switch">
@@ -126,7 +126,7 @@
 
         <!-- SMS Alert Settings -->
         <div class="settings-row">
-          <label for="sms-alert">SMS Alert</label>
+          <label for="sms-switch">SMS Alert</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -157,7 +157,7 @@
 
         <!-- Line Alert Settings -->
         <div class="settings-row">
-          <label for="line-alert">Line Alert</label>
+          <label for="line-switch">Line Alert</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -188,7 +188,7 @@
 
         <!-- Email Alert Settings -->
         <div class="settings-row">
-          <label for="email-alert">Email Alert</label>
+          <label for="email-switch">Email Alert</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -219,7 +219,7 @@
 
         <!-- Notification Settings -->
         <div class="settings-row">
-          <label for="notification">Notification</label>
+          <label for="notification-switch">Notification</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -234,7 +234,7 @@
 
         <!-- Privacy Settings -->
         <div class="settings-row">
-          <label for="privacy">Privacy</label>
+          <label for="privacy-switch">Privacy</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -248,7 +248,7 @@
 
         <!-- History Settings -->
         <div class="settings-row">
-          <label for="history">History</label>
+          <label for="history-switch">History</label>
           <label class="switch">
             <input
               type="checkbox"
@@ -267,9 +267,9 @@
 
         <!-- Default Setting -->
         <div class="settings-row">
-          <label for="default">Default</label>
+          <label for="default-switch">Default</label>
           <label class="switch">
-            <input type="checkbox" id="default" />
+            <input type="checkbox" id="default-switch" />
             <span class="slider"></span>
           </label>
         </div>
