Update: app/pages/command.html, app/pages/settings.html, index.html

--- a/app/pages/command.html
+++ b/app/pages/command.html
@@ -7,6 +7,7 @@
       onclick="resumeVideo()"
       id="btn-resume"
       style="width: 20%; display: none"
+      type="button"
     >
       Resume
     </button>
@@ -15,6 +16,7 @@
       id="btn-pause"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       Pause
     </button>
@@ -23,6 +25,7 @@
       id="btn-capture"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       Capture
     </button>
@@ -31,6 +34,7 @@
       id="btn-overlay1"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       No Overlay
     </button>
@@ -39,6 +43,7 @@
       id="btn-overlay2"
       style="width: 20%; display: none"
       disabled="true"
+      type="button"
     >
       Overlay
     </button>
@@ -49,6 +54,7 @@
       id="btn-record"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       Record
     </button>
@@ -56,6 +62,7 @@
       onclick="stopRCVideo()"
       id="btn-stoprc"
       style="width: 20%; display: none"
+      type="button"
     >
       Stop
     </button>
@@ -65,6 +72,7 @@
       id="btn-reset"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       Reset
     </button>
@@ -74,6 +82,7 @@
       id="btn-frame1"
       style="width: 20%; display: inline-block"
       disabled="true"
+      type="button"
     >
       No Frame
     </button>
@@ -82,6 +91,7 @@
       id="btn-frame2"
       style="width: 20%; display: none"
       disabled="true"
+      type="button"
     >
       Frame
     </button>
