--- a/app/pages/settings.html
+++ b/app/pages/settings.html
@@ -275,7 +275,7 @@
         </div>
 
         <!-- Button to download JSON -->
-        <button onclick="downloadJSONFile()">Download</button>
+        <button type="button" onclick="downloadJSONFile()">Download</button>
         <input
           class="file-path-input"
           type="text"
