--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
           onclick="startButton()"
           id="btn-start"
           style="width: 65%; display: inline-block"
+          type="button"
           disabled="true"
         >
           Start
@@ -163,6 +164,7 @@
           onclick="stopButton()"
           id="btn-stop"
           style="width: 65%; display: none"
+          type="button"
           disabled="true"
         >
           Stop
@@ -182,6 +184,7 @@
           onclick="showVoice()"
           id="btn-voice"
           style="max-width: 65%"
+          type="button"
           disabled="true"
         >
           Voice
@@ -191,6 +194,7 @@
           onclick="showDetect()"
           id="btn-detect"
           style="max-width: 65%"
+          type="button"
           disabled="true"
         >
           Detect
@@ -200,6 +204,7 @@
           onclick="showSettings()"
           id="btn-settings"
           style="max-width: 65%"
+          type="button"
           disabled="true"
         >
           Settings
