Update: app/pages/help.html, app/pages/source.html, app/pages/tutorial.html, index.html

--- a/app/pages/help.html
+++ b/app/pages/help.html
@@ -60,6 +60,8 @@
   <!-- <hr /> -->
 
   <div class="controls-section">
-    <button onclick="HideHelp()" style="margin: 15px 0">Hide</button>
+    <button onclick="HideHelp()" type="button" style="margin: 15px 0">
+      Hide
+    </button>
   </div>
 </div>
