--- a/app/pages/tutorial.html
+++ b/app/pages/tutorial.html
@@ -77,6 +77,8 @@
   <!-- <hr /> -->
 
   <div class="controls-section">
-    <button onclick="HideTutorial()" style="margin: 15px 0">Hide</button>
+    <button onclick="HideTutorial()" type="button" style="margin: 15px 0">
+      Hide
+    </button>
   </div>
 </div>
