--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
           onclick="showCommand()"
           id="btn-command"
           style="max-width: 65%"
+          type="button"
           disabled="true"
         >
           Command
