--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -1,6 +1,6 @@
 <div class="container-section" style="margin: 0; padding: 5px">
   <!-- <h3>Video Source</h3> -->
-  <div class="video-source-section" id="video-source-section">
+  <div class="video-source-section">
     <div class="source-section">
       <label for="video-source">
         <select id="video-source" disabled="true" title="Select video source">
