Update: app/pages/mode.html

--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -1,5 +1,5 @@
 <div class="container-section" style="margin: 0; padding: 5px">
-  <div class="video-source-section" id="video-source-section">
+  <div class="video-source-section">
     <div class="mode-section" id="mode-section">
       <div class="mode-select-section">
         <label for="mode-select">
