Update: app/pages/detect.html, app/pages/mode.html, app/pages/settings.html, app/pages/status.html

--- a/app/pages/detect.html
+++ b/app/pages/detect.html
@@ -1,6 +1,6 @@
 <div class="container-section" style="margin: 0; padding: 5px">
   <div class="controls-section">
-    <div class="video-source-section" id="video-source-section">
+    <div class="video-source-section">
       <div class="controls-section">
         <!-- Detection Settings -->
 
