--- a/app/pages/status.html
+++ b/app/pages/status.html
@@ -1,6 +1,6 @@
 <div class="container-section" style="margin: 0; padding: 5px">
-  <div class="status-section" id="status-section">
-    <div class="status-header" id="status-header">
+  <div class="status-section">
+    <div class="status-header">
       <div class="status-content-section">
         <!-- Detection Indicators -->
         <div class="detection-indicators" style="margin-top: 10px">
