--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -1,6 +1,6 @@
 <div class="container-section" style="margin: 0; padding: 5px">
   <div class="video-source-section">
-    <div class="mode-section" id="mode-section">
+    <div class="mode-section">
       <div class="mode-select-section">
         <label for="mode-select">
           <select id="mode-select" title="Select mode">
