--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.1/dist/tesseract.min.js"></script> -->
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
-    <script src="app/js/script_tesseract.js"></script>
+    <!-- <script src="app/js/script_tesseract.js"></script> -->
   </head>
 
   <body>
@@ -132,7 +132,7 @@
       </div>
 
       <!-- MJPEG/HTTPS stream -->
-      <!-- <img
+      <img
         id="ipcam-feed-img"
         src="https://192.168.245.139:5500/video"
         alt="IP Camera Feed"
@@ -143,7 +143,7 @@
           display: block;
           margin: 0 auto;
         "
-      /> -->
+      />
 
       <!-- <video id="ipcam-feed-video" controls autoplay>
         <source src="https://192.168.245.139:5500/" type="video/mp4" />
