Update: app/js/selector_source.js, index.html

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
       </div>
 
       <!-- MJPEG/HTTPS stream -->
+      <!-- src="https://192.168.245.139:5500/video" -->
       <img
         id="ipcam-feed-img"
-        src="https://192.168.245.139:5500/video"
+        src="https://ocr-tech.github.io/OpenLens/video"
         alt="IP Camera Feed"
         style="
           width: 100%;
