Update: index.html

--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@
       </div>
 
       <!-- MJPEG/HTTPS stream -->
-      <!-- src="https://192.168.245.139:5500/video" -->
-      <img
+      <!-- <img
         id="ipcam-feed-img"
-        src="https://ocr-tech.github.io/OpenLens/video"
+        src="https://192.168.245.139:5500/video"
         alt="IP Camera Feed"
         style="
           width: 100%;
@@ -144,7 +143,7 @@
           display: block;
           margin: 0 auto;
         "
-      />
+      /> -->
 
       <!-- <video id="ipcam-feed-video" controls autoplay>
         <source src="https://192.168.245.139:5500/" type="video/mp4" />
