Update: app/css/styles_main.css, app/js/detect_break.js, app/js/detect_fall.js, app/js/detect_fire.js, app/js/detect_flood.js, app/js/detect_light.js, app/js/detect_motion.js, app/js/detect_object.js, app/js/detect_rain.js, app/js/detect_smoke.js, app/js/main_start.js, app/js/main_start_cam.js, app/js/main_stop.js, app/js/selector_source.js, app/js/setting_dis_vidsize.js, app/pages/source.html, resources/image/img1.jpg, resources/image/img2.jpg, resources/image/img3.jpg, resources/image/img5.jpg, resources/video/img1.jpg, resources/video/img2.jpg, resources/video/img3.jpg, resources/video/img5.jpg

--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -10,6 +10,7 @@
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
           <option value="video">Video (file)</option>
+          <option value="image">Image (file)</option>
         </select>
       </label>
 
@@ -18,7 +19,7 @@
         class="button-browse"
         disabled="true"
         type="button"
-        onclick="browseVideoFile()"
+        onclick="browseFile()"
       >
         Browse
       </button>
