--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -10,7 +10,7 @@
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
           <option value="video">Video (file)</option>
-          <option value="image" selected>Image (file)</option>
+          <option value="image">Image (file)</option>
         </select>
       </label>
 
