--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -7,7 +7,7 @@
           <!-- <option value="camera" selected>Camera (default)</option> -->
           <option value="camera" selected>Camera (default)</option>
           <option value="camera_usb">USB Camera (external)</option>
-          <option value="camera_ip">IP Camera (wifi)</option>
+          <option value="camera_ip" selected>IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
           <option value="video">Video (file)</option>
           <option value="image">Image (file)</option>
