Update: app/css/styles_main.css, app/js/init_system.js, app/js/main_help.js, app/js/main_tutorial.js, app/js/main_visitor.js, app/pages/help.html, app/pages/tutorial.html, app/pages/visitor.html, index.html

--- a/app/pages/help.html
+++ b/app/pages/help.html
@@ -60,7 +60,7 @@
   <!-- <hr /> -->
 
   <div class="controls-section">
-    <button onclick="HideHelp()" type="button" style="margin: 15px 0">
+    <button onclick="hideHelp()" type="button" style="margin: 15px 0">
       Hide
     </button>
   </div>
