--- a/app/pages/tutorial.html
+++ b/app/pages/tutorial.html
@@ -77,7 +77,7 @@
   <!-- <hr /> -->
 
   <div class="controls-section">
-    <button onclick="HideTutorial()" type="button" style="margin: 15px 0">
+    <button onclick="hideTutorial()" type="button" style="margin: 15px 0">
       Hide
     </button>
   </div>
