--- a/app/pages/visitor.html
+++ b/app/pages/visitor.html
@@ -4,17 +4,16 @@
 
   <h3>Visitor Information</h3>
 
-  <!-- // number of visitors -->
-  <p><span id="visitor-count">1</span> visitors.</p>
-  <p><span id="visitor-date">Visitor Date</span> has visited you.</p>
-  <p><span id="visitor-time">Visitor Time</span> has visited you.</p>
-  <p><span id="visitor-ip">Visitor IP</span> has visited you.</p>
-  <p><span id="visitor-browser">Visitor Browser</span> has visited you.</p>
-  <p><span id="visitor-os">Visitor OS</span> has visited you.</p>
-  <p><span id="visitor-device">Visitor Device</span> has visited you.</p>
-  <p><span id="visitor-location">Visitor Location</span> has visited you.</p>
-  <p><span id="visitor-referrer">Visitor Referrer</span> has visited you.</p>
-  <p></p>
+  <a href="https://www.flagcounter.me/details/f42"
+    ><img src="https://www.flagcounter.me/f42/" alt="Flag Counter"
+  /></a>
+
+  <a href="https://info.flagcounter.com/XtZi"
+    ><img
+      src="https://s01.flagcounter.com/count2/XtZi/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
+      alt="Flag Counter"
+      border="0"
+  /></a>
 
   <div class="controls-section">
     <button onclick="hideVisitor()" type="button" style="margin: 15px 0">
